nav bar in progress

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,28 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <header>
+            <nav>
+                <figure>
+                    <span>LOGO</span>
+                </figure>
+                <ul>
+                    <li><a href="">CAFÉES MOULUES</a></li>
+                    <li><a href="">CAFÉS EN GRAINS</a></li>
+                    <li><a href="">CAFÉS DOSSESTES</a></li>
+                    <li><a href="">CAFÉS CAPSULES</a></li>
+                </ul>
+                <div>
+                    <a href="">CONNEXION</a>
+                    <span>/</span>
+                    <a href="">INSCRIPTION</a>
+                </div>
+                <div>
+                    <a href="">card</a>
+                </div>
+            </nav>
+        </header>
+        {% block body %}
+        {% endblock %}
     </body>
 </html>
