--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -10,6 +10,106 @@
     font-family: 'Alatsi-Regular', sans-serif;
 }
 /* ******************************************body****************************************************** */
+.nav{
+    display: flex;
+    background-color: #65451F;
+    color: white;
+    width: 100%;
+    height: 75px;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 0px 0px 20px 20px;
+    text-shadow: 2px 2px 9px rgba(0,0,0,0.73);
+}
+
+.ul{
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+    flex-direction: row;
+    list-style-type: none;
+}
+
+.ul li a {
+    text-decoration: none;
+    color: white;
+    position: relative;
+}
+
+.logo a{
+    color: white;
+    text-decoration: none;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
+}
+
+.logo img{
+    height: 100px;
+    width: 100px;
+}
+
+.cart{
+    width: 5%;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.connexion {
+    display: flex;
+    justify-content: end;
+    width: 30%;
+}
+
+.connexion a {
+    text-decoration: none;
+    color: white;
+    position: relative;
+}
+
+.ul li a::after{
+    content: "";
+    position: absolute;
+    background-color: white;
+    height: 3px;
+    width: 0;
+    border-radius: 10px;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s;
+}
+
+.connexion a::after{
+    content: "";
+    position: absolute;
+    background-color: white;
+    height: 3px;
+    width: 0;
+    border-radius: 10px;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s;
+}
+
+.connexion a:hover::after{
+    width: 100%;
+}
+
+.ul li a:hover::after{
+    width: 100%;
+}
+
+.cart a{
+    text-decoration: none;
+    color: white;
+}
 
 .container{
     width: 100%;
