affichage par meilleures ventes

--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -111,6 +111,12 @@
     color: white;
 }
 
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container{
     width: 100%;
     display: flex;
