--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,13 @@
         </header>
         {% block body %}
         {% endblock %}
+        <footer class="footer">
+            <a href=""><span>Confidentialité et cookies |</span></a>
+            <a href=""><span>Gerer les cookies |</span></a>
+            <a href=""><span>Mentions légales |</span></a>
+            <a href=""><span>Nous contacter |</span></a>
+            <a href=""><span>S’abonner à la newsletter</span></a>
+        </footer>
         {% block javascripts %}
             <script src="{{ asset('Js/appSliders.js')}}"></script>
             <script src="https://kit.fontawesome.com/4eb7898d29.js" crossorigin="anonymous"></script>
