--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -302,9 +302,19 @@
     font-size: 20px;
 }
 /* *************************************DETAIL ARTICLE******************************************* */
+.detailContainer{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .detailSousContainer{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    width: 95%;
 }
 
 .detailImg img{
@@ -322,16 +332,17 @@
     border-radius: 20px;
     justify-content: center;
     align-items: center;
-    height: 300px;
+    height: 200px;
     width: 10%;
 }
 
 .btnAddPanier{
+    margin-top: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #65451F;
-    border: #65451F solid 2px;
+    background-color: #765827;
+    border: #765827 solid 2px;
     color: white;
     text-decoration: none;
     font-size: 17px;
@@ -343,7 +354,27 @@
     outline: none;
 }
 
+.prix{
+    color: #765827;
+    font-size: 40px;
+}
+
+.imageArticle{
+    display: flex;
+    width: 80%;
+}
+
+.detaiArticle {
+    padding-left: 2%;
+    width: 60%;
+}
+
+.descriptif{
+    color: #1C62D7;
+    text-decoration: none;
+}
+
 .btnAddPanier:hover{
     box-shadow: inset 200px 0 0 0 white;
-    color: #65451F;
+    color: #765827;
 }
